--- a/_includes/custom-icon-links.html
+++ b/_includes/custom-icon-links.html
@@ -1,9 +1,12 @@
-<div id="socialMedia">
-        <a href="mailto:{{ site.social-media.email }}" title="Email"><i class="fa fa-envelope-square"></i></a>
-    {% if site.social-media.facebook %}
-        <a href="https://www.facebook.com/{{ site.social-media.facebook }}" title="Facebook"><i class="fa fa-facebook-square"></i></a>
+
+{% if site.data.social-media %}
+<div id="social-media">
+    {% assign sm = site.data.social-media %}
+    {% for entry in site.data.social-media %}
+    {% assign key = entry | first %}
+        {% if sm[key].id %}
+            <a href="{{ sm[key].href }}{{ sm[key].id }}" title="{{ sm[key].title }}" rel="me"><i class="fa {{ sm[key].fa-icon }}"></i></a>
     {% endif %}
-    {% if site.social-media.twitter %}
-        <a href="https://www.twitter.com/{{ site.social-media.twitter }}" title="Twitter"><i class="fa fa-twitter-square"></i></a>
-    {% endif %}
+    {% endfor %}
 </div>
+{% endif %}
