Added linkedin feature

--- a/_includes/info-box.html
+++ b/_includes/info-box.html
@@ -41,6 +41,14 @@
         </li>
         {% else %}
         {% endif %}
+        {% if site.linkedin %}
+        <li>
+          <a href="{{ site.linkedin }}" target="_blank">
+            <i class="fa fa-linkedin" aria-hidden="true"></i>
+          </a>
+        </li>
+        {% else %}
+        {% endif %}
       </ul>
     </div>
     <div class="info-newsletter">
