--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,6 +29,10 @@
       <li><a href="{{ site.youtube }}" target="_blank"><i class="fa fa-youtube" aria-hidden="true"></i></a></li>
     {% else %}
     {% endif %}
+    {% if site.linkedin %}
+      <li><a href="{{ site.linkedin }}" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+    {% else %}
+    {% endif %}    
     </ul>
 
     <div class="copyright">
