--- a/_includes/social.html
+++ b/_includes/social.html
@@ -38,4 +38,12 @@
   </li>
   {% else %}
   {% endif %}
+  {% if site.linkedin %}
+  <li>
+    <a href="{{ site.linkedin }}" target="_blank">
+      <i class="fa fa-linkedin" aria-hidden="true"></i>
+    </a>
+  </li>
+  {% else %}
+  {% endif %}
 </ul>
