Adding events to nav

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -49,6 +49,7 @@
     <ul>
         <h3>Navigation</h3>
         <li><a href="{{ site.baseurl }}/">Home</a></li>
+        <li><a href="{{ site.baseurl }}/events">Events</a></li>
         <li><a href="{{ site.baseurl }}/about">About</a></li>
         <!-- <li><a href="{{ site.baseurl }}/authors">Contributors <span class="badge badge-primary">new</span></a></li> -->
         <li><a href="{{ site.baseurl }}/contact">Contact</a></li>       
@@ -110,6 +111,9 @@
         <div class="row">
             <div class="col-md-6 col-sm-12 text-center text-lg-left">
                 Copyright © {{ site.time | date: "%Y" }} {{ site.name }} 
+            </div>
+            <div class="col-md-6 col-sm-12 text-center text-lg-right">
+                <a href="{{ site.baseurl }}/events">Watch or listen to my talks, podcasts and more...</a>
             </div>
         </div>
     </div>
